# psifr

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  Makefile  README.md  asv.conf.json  benchmark  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yml  python-publish.yml
benchmarks/: benchmarks.py
data/: cfr_raw_data.csv  cfr_raw_data_subset.csv  cfr_test_data.csv
docs/: conf.py  index.rst  references.bib  references.rst
docs/api/: fr.rst  maskers.rst  measures.rst  outputs.rst  overview.rst  stats.rst  transitions.rst
docs/development/: analyses.rst  coding.rst  overview.rst  stats.rst  transitions.rst
docs/guide/: crp.rst  grouping.rst  import.rst  lag_crp.rst  order.rst  overview.rst  recall.rst  score.rst
docs/tutorials/: overview.rst
docs/usage/: installation.rst
jupyter/: demo_block.ipynb  demo_clustering.ipynb  demo_recall.ipynb  test_fr_clean.ipynb  test_fr_raw.ipynb
matlab/: frdata2table.m  subj_frdata2table.m
paper/: paper.bib  paper.md
psifr/: fr.py  transitions.py
psifr/data/: Morton2013.csv
psifr/tests/: test_category_crp.py  test_lag_crp.py  test_merge.py  test_pair_crp.py  test_transitions.py  test_transitions_masker.py
scripts/: frdata2table.m  subj_frdata2table.m  trial_subset.m
source/: conf.py  index.rst
source/api/: fr.rst  overview.rst  transitions.rst
source/guide/: overview.rst  score.rst
source/tutorials/: overview.rst
source/usage/: import.rst
src/psifr/: __init__.py  clustering.py  fr.py  maskers.py  (+4 more)
tests/: test_category_clust.py  test_category_crp.py  test_category_stats.py  test_count_category.py  test_count_distance.py  test_count_lag.py  test_count_output.py  test_count_outputs.py  test_count_pair.py  test_distance_crp.py  test_distance_stats.py  test_fr.py  test_lag_crp.py  test_lag_stats.py  test_maskers.py  test_merge.py  test_pair_crp.py  test_pair_stats.py  test_plots.py  test_rank_distance.py  test_rank_lag.py  test_rank_lags.py  test_spc.py  test_transitions.py
(+1 files in other folders)
