[metadata]
name = psifr
version = 0.8.1
url = https://github.com/mortonne/psifr
author = Neal Morton
author_email = mortonne@gmail.com
description = Psifr: Analysis and visualization of free recall data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = psychology, memory, free recall
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas>=1.0.0
    matplotlib!=3.3.1
    seaborn>=0.9.1, <0.12.0
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
psifr = data/*.csv, distances/*.npz

[options.extras_require]
docs = sphinx; pydata-sphinx-theme; ipython; sphinxcontrib-bibtex
test = pytest; codecov; pytest-cov
perf = snakeviz; asv
